Alterações locais nos pacotes