@@ -3,7 +3,6 @@ package com.tessera.backend.config;
 import com.tessera.backend.security.JwtAuthenticationFilter;
 import com.tessera.backend.security.UserDetailsServiceImpl;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
@@ -18,11 +17,10 @@ import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import org.springframework.web.filter.CorsFilter;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 
 @Configuration
 @EnableWebSecurity
@@ -34,9 +32,6 @@ public class SecurityConfig {
 
     @Autowired
     private JwtAuthenticationFilter jwtAuthenticationFilter;
-
-    @Value("${app.cors.allowed-origins:http://localhost:3000}")
-    private String[] allowedOrigins;
 
     @Bean
     public PasswordEncoder passwordEncoder() {
@@ -59,21 +54,17 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Usa a configuração de CORS definida abaixo
             .csrf(csrf -> csrf.disable())
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
             .authorizeHttpRequests(auth -> auth
                 .requestMatchers(
-                        "/auth/**", // Libera /auth/register e /auth/login
-                        // Libera os endpoints do Swagger/OpenAPI
+                        "/auth/**", // Liberar todos endpoints de /auth
                         "/v3/api-docs/**",
                         "/swagger-ui/**",
                         "/swagger-ui.html",
-                        "/ws/**" // Endpoint do WebSocket
+                        "/ws/**" // Liberar o endpoint de WebSocket
                 ).permitAll()
-                .requestMatchers("/admin/**").hasRole("ADMIN")
-                .requestMatchers("/advisor/**").hasRole("ADVISOR") 
-                .requestMatchers("/student/**").hasRole("STUDENT") 
                 .anyRequest().authenticated()
             );
 
@@ -82,18 +73,22 @@ public class SecurityConfig {
 
         return http.build();
     }
-    
+
     @Bean
-    public UrlBasedCorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration config = new CorsConfiguration();
-        config.setAllowCredentials(true);
-        // Carrega as origens permitidas a partir da propriedade de configuração
-        config.setAllowedOrigins(Arrays.asList(allowedOrigins));
-        config.setAllowedHeaders(Collections.singletonList("*"));
-        config.setAllowedMethods(Collections.singletonList("*"));
-        
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration configuration = new CorsConfiguration();
+        // Permite requisições da sua aplicação frontend
+        configuration.setAllowedOrigins(List.of("http://localhost:5173"));
+        // Permite todos os métodos HTTP (GET, POST, PUT, etc.)
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        // Permite todos os headers
+        configuration.setAllowedHeaders(List.of("*"));
+        // Permite o envio de credenciais (cookies, tokens de autorização)
+        configuration.setAllowCredentials(true);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/**", config);
+        // Aplica essa configuração a todas as rotas da sua API
+        source.registerCorsConfiguration("/**", configuration);
         return source;
     }
 }
